# SniperBishop

./: LICENSE  README.md
SniperBishop_GitHub_Release/: .gitignore  CHECKSUMS.txt  CMakeLists.txt  README.md  RELEASE_NOTES_v2.61.md
SniperBishop_GitHub_Release/.github/workflows/: build-windows.yml
SniperBishop_GitHub_Release/docs/: CCRL_SUBMISSION.md  MODEL_CARD.md
SniperBishop_GitHub_Release/scripts/: smoke_test.ps1
SniperBishop_GitHub_Release/src/: sniper_bishop.cpp
docs/: ARCHITECTURE.md  BENCHMARKS.md
scripts/: build_windows.ps1
tools/: backing_knight.py  horizontal_rook.py
